# awsideman

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  PERFORMANCE_OPTIMIZATION_RECOMMENDATIONS.md  README.md  RELEASE_NOTES_v0.1.0-alpha.1.md  ROLLBACK_PERFORMANCE_ANALYSIS.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SPEC.md  convert-assignments-for-revoke.py  example-config.yaml  example-profile-cache-config.yaml  export-user-assignments-advanced.py  export-user-assignments-workflow.md  output.txt  phase2_cli_validation_report.md  phase2_comprehensive_test_validation_report.md  pyproject.toml  users.json
.github/workflows/: ci.yml  release.yml
.kiro/ai-summary/: ACCESS_REVIEWS_IMPLEMENTATION_SUMMARY.md  CACHE_CLEARING_FIX_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  FINAL_PERFORMANCE_RESULTS.md  MULTI_ACCOUNT_PERFORMANCE_TEST_FIX.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_ISSUE_RESOLUTION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERMISSION_SET_TEST_OPTIMIZATION_SUMMARY.md  ROLLBACK_PERFORMANCE_FINAL_RESOLUTION.md  STORAGE_PERFORMANCE_ANALYSIS.md
.kiro/summary/: ACCOUNT_CACHE_OPTIMIZATION_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md
docs/: ACCESS_REVIEW_OPTIMIZATION.md  ACCOUNT_CACHE_OPTIMIZATION.md  BACKUP_CLI_IMPROVEMENTS.md  BACKUP_CONFIGURATION.md  BULK_OPERATIONS.md  CACHE_ARCHITECTURE.md  CACHE_DOCUMENTATION_INDEX.md  CACHE_KEY_PATTERNS.md  CACHE_TROUBLESHOOTING.md  CACHE_USAGE_EXAMPLES.md  COMPREHENSIVE_PROFILE_ISOLATION_FIX.md  ENVIRONMENT_VARIABLES.md  ERROR_HANDLING_IMPLEMENTATION.md  FIND_COMMANDS_REFERENCE.md  MULTI_ACCOUNT_OPERATIONS.md  MULTI_ACCOUNT_TROUBLESHOOTING.md  PERMISSION_CLONING.md  PERMISSION_CLONING_INDEX.md  PERMISSION_CLONING_PERFORMANCE.md  PERMISSION_CLONING_TROUBLESHOOTING.md  README.md  RESTORE_CLI_REFACTORING.md  ROLLBACK_API_REFERENCE.md  ROLLBACK_DEVELOPER_GUIDE.md  ROLLBACK_OPERATIONS.md  ROLLBACK_PROCEDURES.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  USER_FIND_COMMAND.md  configuration.md  environment-variables.md  template-format.md  template-troubleshooting.md
docs/backup-restore/: README.md  cli-reference.md  getting-started.md
docs/enhanced-progress-reporting/: README.md
docs/releases/: 0.1.1-alpha.md  0.1.2-alpha.md  0.1.2-beta.md  README.md  v0.1.0-alpha.3.md  v0.1.1-alpha.md
examples/: error_handling_demo.py
examples/access-reviews/: README.md  sample-account-export.json
examples/bulk-operations/: README.md  account-override-assignments.json  advanced-assignments.json  mixed-assignments.json  sample-group-assignments.json  sample-user-assignments.json  validation-errors.json
examples/cache-configurations/: README.md  ci-cd.yaml  development.yaml  high-security.yaml  multi-region.yaml  production.yaml  team-hybrid.yaml
examples/configuration/: example-config.yaml
examples/enhanced-progress-reporting/: README.md
examples/multi-account-operations/: README.md
examples/permission-cloning/: README.md
examples/rollback-operations/: README.md  bulk-rollback.sh  compliance-report.sh  emergency-rollback.sh  extend-rollback-system.py  rollback-config.yaml  rollback-monitor.sh  sample-operation-log.json
examples/templates/: README.md  (+4 more)
scripts/: README.md  release.sh  validate_imports.py  validate_internal_imports.py
temp/: fixed_function.py  validate_permission_set_name.py
tests/: README.md  __init__.py
(+709 files in other folders)
