[tool.poetry]
name = "awsideman"
version = "0.1.0"
description = "AWS Identity Center Manager - A CLI tool for managing AWS Identity Center operations"
authors = ["Erhan Vikyol"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
typer = "0.7.0"
boto3 = "^1.28.0"
rich = "^13.4.2"
pydantic = "^2.0.0"
click = "<8.2.0"
cryptography = ">=3.4.8,<45.0.0"
keyring = ">=23.0.0,<25.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
awsideman = "src.awsideman.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100