[tool.poetry]
name = "awsideman"
version = "0.1.1-alpha"
description = "AWS Identity Center Manager - A CLI tool for managing AWS Identity Center operations"
authors = ["Erhan Vikyol"]
readme = "README.md"
packages = [{include = "src"}]
license = "MIT"
homepage = "https://floccus.se/awsideman"  # Add homepage
repository = "https://github.com/vikyol/awsideman"  # Add repository
keywords = ["aws", "identity-center", "iam", "cli", "management"]  # Add keywords
classifiers = [  # Add classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "0.7.0"
boto3 = "^1.28.0"
rich = "^13.4.2"
pydantic = "^2.0.0"
click = "<8.2.0"
cryptography = ">=3.4.8,<45.0.0"
keyring = ">=23.0.0,<25.0.0"
pyyaml = "^6.0"
aiohttp = "^3.8.0"
aiofiles = "^23.0.0"
aioboto3 = "^12.0.0"
lz4 = "^4.4.4"
psutil = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^25.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
ruff = "^0.1.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
awsideman = "src.awsideman.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "click.*",
    "typer.*"
]
ignore_missing_imports = true
